--- a/src/collision_avoidance/CMakeLists.txt
+++ b/src/collision_avoidance/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(Boost REQUIRED COMPONENTS system)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -61,11 +61,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
+#add_action_files(
 #   FILES
-#   Action1.action
-#   Action2.action
-# )
+#   CollisionMain
+#)
 
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
@@ -105,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES collision_avoidance
-#  CATKIN_DEPENDS roscpp rospy std_msgs
+  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -195,6 +194,14 @@ include_directories(
 #############
 ## Testing ##
 #############
+
+## Build CollisionMain
+include_directories(include ${catkin_INCLUDE_DIRS})
+
+add_executable(CollisionMain src/CollisionMain.cpp)
+target_link_libraries(CollisionMain ${catkin_LIBRARIES})
+#add_dependencies(CollisionMain collision_avoidance_generate_messages_cpp)
+
 
 ## Add gtest based cpp test target and link libraries
 # catkin_add_gtest(${PROJECT_NAME}-test test/test_collision_avoidance.cpp)
